# HPRC-Docs

./: .gitignore  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  deploy.yaml  pages-preview.yml
composites/: index.html
docs/: composites.md  external-resources.md  extra.css  index.md  programs.md  recovery.md  safety.md
docs/firm/: firm.md  firm_contributing_overview.md  firm_data.md  flight_controllers_and_computers.md  sensors.md
docs/git/: git.md  github.md
docs/lab/: 3d-printing.md  hazard-storage.md  lab.md  soldering.md  tools.md
docs/outreach/: overview.md
docs/payload/: cameras.md  payload.md  raspberry-pi.md
docs/recovery/: deployment.md  tracking.md
docs/resources/: external-resources.md
docs/rocketry-101/: aerodynamics.md  deployment.md  getting-started.md  motors.md  regulations.md  simulations.md  stability.md  staging.md
docs/safety/: ejection-testing.md  safety.md
docs/vehicle/: bulkheads.md  composites.md  materials.md
firm/firm/: index.html
firm/firm_contributing_overview/: index.html
firm/firm_data/: index.html
firm/flight_controllers_and_computers/: index.html
firm/sensors/: index.html
git/git/: index.html
git/github/: index.html
lab/3d-printing/: index.html
lab/hazard-storage/: index.html
lab/lab/: index.html
lab/tools/: index.html
payload/cameras/: index.html
payload/payload/: index.html
payload/raspberry-pi/: index.html
pr-preview/pr-1/: 404.html  index.html  sitemap.xml
programs/: index.html
recovery/: index.html
search/: search_index.json
(+422 files in other folders)
