[project]
name = "hprc-docs"
version = "0.1.0"
description = "Documentation for general HPRC activities."
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-git-authors-plugin>=0.10.0",
  "mkdocs-git-revision-date-localized-plugin>=1.5.1",
  "mkdocs-glightbox>=0.5.2",
  "mkdocs-material>=9.5,<10.0",
  "watchdog>=6.0.0",
]
